--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,17 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.2022KW_winterproj">
+        <activity
+            android:name=".selection.SelectionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WordActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
